--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "font-awesome": "fontawesome#^4.6.1",
     "animate.css": "^3.5.1",
     "devicon": "*",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-local-storage": "^0.2.7"
   }
 }
