--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gulp-jshint": "^2.0.0",
     "gulp-uglify": "^1.5.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-sass": "^2.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
