--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Projeto Teste da Elo7",
   "main": "none.js",
   "dependencies": {
+  },
+  "devDependencies": {
+    "gulp-sass": "^2.3.1",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-uglify": "^1.5.3"
-  },
-  "devDependencies": {
-    "gulp-sass": "^2.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
