--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "devicon": "*",
     "angular-ui-router": "^0.2.18",
     "angular-local-storage": "^0.2.7",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "angular-oauth2": "^4.0.0",
+    "angular-cookies": "^1.5.5"
   }
 }
