--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "Projeto Teste da Elo7",
   "main": "none.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "gulp-sass": "^2.3.1",
-    "gulp-angular-templatecache": "^1.8.0",
     "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "imagemin-pngquant": "^5.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
