--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-sass": "^2.3.1",
-    "gulp-uglify": "^1.5.3",
-    "imagemin-pngquant": "^5.0.0"
+    "gulp-uglify": "^1.5.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
