--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marsexpress",
   "version": "1.0.0",
-  "description": "Projeto Teste da Elo7",
+  "description": "Projeto Teste",
   "main": "none.js",
   "dependencies": {},
   "devDependencies": {
