--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Rudolfo Borges <oliveira.rudolfo@gmail.com>"
   ],
-  "description": "Teste de programação Elo7",
+  "description": "Teste de programação",
   "main": "",
   "moduleType": [],
   "license": "MIT",
